network-policies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: demo

spec:
  podSelector: {}

  policyTypes:
  - Ingress
